# brainypi-gpio-examples

./: README.md
using-gpio-http-api/cpp/: CMakeLists.txt  README.md
using-gpio-http-api/cpp/include/: gpioapi.h
using-gpio-http-api/cpp/src/: gpioapi.cpp  main.cpp
using-gpio-http-api/python/: get-gpio.py  set-gpio.py
using-gpio-http-api/shell/: get-gpio-pin.sh  set-gpio-pin.sh
using-gpio-lib/: gpio-example3.py
using-gpio-lib/nodejs/: gpiolib.js  main.js
